# grid-printer

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: cars.rs  colors.rs  error.rs
src/: lib.rs  style.rs
